# conrad

./: CHANGELOG.md  conrad.cabal  salary_data.csv
app/: Main.hs
src/: Conrad.hs  DiffFunc.hs  Matrix.hs  Mnist.hs  Neuron.hs
src/Prelude/: Composer.hs  Conrad.hs  Continuation.hs  Reverse.hs  State.hs
src/autograd/: DifferentialOperators.hs
